--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "apollo-boost": "^0.4.3",
     "apollo-link-context": "^1.0.18",
+    "apollo-upload-client": "^11.0.0",
     "graphql": "^14.4.2",
     "react": "^16.8.6",
     "react-apollo": "^2.5.8",
     "react-dom": "^16.8.6",
+    "react-drop-zone": "^3.0.7",
     "react-navigation": "^3.11.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
